# mnn-compare-customlib

./: .gitignore  CMakeLists.txt  README.md  build.gradle  gradle.properties  settings.gradle
.venv-export/: pyvenv.cfg
.venv-export/Scripts/: activate  activate.bat
android/app/: build.gradle
android/benchmark_app/: build.gradle
bench/: bench_config.json  compare.py  parse_results.py  report_template.md
bench/prompts/: prompt_128.txt  prompt_2048.txt  prompt_512.txt  prompt_8192.txt
build-android-check/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-android-check/customlib/: cmake_install.cmake
build-host/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
build-host-quality/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
build-host-quality/Testing/Temporary/: CTestCostData.txt
build-host-quality/customlib/: cmake_install.cmake
build-host/Testing/Temporary/: CTestCostData.txt
build-host/customlib/: cmake_install.cmake
customlib/: CMakeLists.txt
customlib/include/: xqwen35.h
customlib/kernels/: kernels.hpp
customlib/kernels/generator/: gen_all.py  gen_attention_decode.py  gen_gated_delta.py  gen_gemv_w2a16.py  gen_gemv_w3a16.py  gen_gemv_w4a16.py  gen_rmsnorm.py  gen_rope.py
customlib/kernels/generator/templates/: gemv_lowbit.cpp.in
customlib/kernels/reference/: ref_attention.cpp  ref_delta.cpp  ref_gemv.cpp  ref_rmsnorm.cpp  ref_rope.cpp
customlib/mnn_bridge/: custom_op_registry.cpp  graph_rewrite.cpp  mnn_bridge.hpp  mnn_loader.cpp  xqwen_attention_execution.cpp  xqwen_delta_execution.cpp  xqwen_ffn_execution.cpp  xqwen_linear_execution.cpp  xqwen_rmsnorm_execution.cpp  xqwen_rope_execution.cpp
customlib/packer/: convert_qwen35.py  pack_linear_w3.py  pack_qwen35_xq4.py  pack_qwen35_xq4_numpy.py  quantize.py  validate_pack.py
customlib/runtime/: cache_manager.cpp  custom_model.cpp  custom_model.hpp  sampler.cpp  session.cpp  session.hpp  telemetry.cpp  tokenizer_bridge.cpp
customlib/tests/golden_prompts/: prompt_smoke.txt
customlib/tests/kernel_correctness/: test_kernels.cpp
customlib/tests/runtime_correctness/: test_runtime.cpp
customlib/tools/: xq_host_quality_runner.cpp
docs/: aws_devicefarm_runbook.md  benchmark_methodology.md  connector_walkthrough.md  kernel_library_code_walkthrough_final.md  kernel_library_code_walkthrough_v14.md  kernels_walkthrough.md  model_facts.md  optimization_log.md
gradle/wrapper/: gradle-wrapper.properties
results/: devicefarm_blocker.md
results/reports/: final_devicefarm_report.json  final_devicefarm_report.md  optimization_attempt_v18.md  quality_debug_blocker.md  quality_validation_report.md  quality_validation_v20r2_current_report.md  quality_validation_v21_report.md  quality_validation_v22_report.md  quality_validation_v25_english_report.md  quality_validation_v26_english_report.md  quality_validation_v27_english_report.md  qwen35_9b_devicefarm_final_report.json  qwen35_9b_devicefarm_final_report.md  qwen35_9b_devicefarm_final_summary.json  qwen35_9b_devicefarm_final_summary.md  qwen35_9b_full_custom_v16_presentation.pptx  qwen35_9b_v17_backend_sweep_presentation.pptx  qwen35_9b_v18r2_optimization_presentation.pptx  qwen35_9b_v27_quality_performance_presentation.pptx  run_history_summary.md
results/reports/evidence/: android_build_v27.txt  cleanup_v27.txt  custom_cpu_v17_test_spec_redacted.yml  custom_cpu_vulkan_hybrid_v17_test_spec_redacted.yml  custom_v22_norm_greedy_quality_r2_test_spec_redacted.yml  custom_v22_norm_greedy_quality_test_spec_redacted.yml  customlib_benchmark_v16_final.json  customlib_cpu_benchmark_v17.json  customlib_cpu_instrumentation_output_v17.txt  customlib_cpu_model_bootstrap_v17.json  customlib_cpu_vulkan_hybrid_benchmark_v17.json  customlib_cpu_vulkan_hybrid_benchmark_v18r2.json  customlib_cpu_vulkan_hybrid_benchmark_v25.json  customlib_cpu_vulkan_hybrid_benchmark_v26.json  customlib_cpu_vulkan_hybrid_benchmark_v27.json  customlib_cpu_vulkan_hybrid_instrumentation_output_v17.txt  customlib_cpu_vulkan_hybrid_model_bootstrap_discovery_v17.txt  customlib_quality_v19r2_cpu_vulkan_hybrid_test_spec_redacted.yml  customlib_quality_v20r2_current_cpu_vulkan_hybrid_test_spec_redacted.yml  customlib_quality_v20r6_gate_active_rope_qgate_cpu_vulkan_hybrid_test_spec_redacted.yml  customlib_quality_v21_current_patched_cpu_vulkan_hybrid_test_spec_redacted.yml  customlib_v18_cpu_vulkan_hybrid_test_spec_redacted.yml  customlib_v18r2_cpu_vulkan_hybrid_test_spec_redacted.yml  customlib_v25_benchmark_cpu_vulkan_hybrid_scheduled.json  customlib_v25_benchmark_cpu_vulkan_hybrid_test_spec_redacted.yml  customlib_v25_benchmark_cpu_vulkan_hybrid_wait.txt  customlib_v25_english_quality_test_spec_redacted.yml  customlib_v25r2_english_quality_test_spec_redacted.yml  customlib_v26_benchmark_cpu_vulkan_hybrid_scheduled.json  customlib_v26_benchmark_cpu_vulkan_hybrid_wait.txt  customlib_v27_benchmark_cpu_vulkan_hybrid_scheduled.json  customlib_v27_benchmark_cpu_vulkan_hybrid_wait.txt  host_build_v27.txt  host_ctest_v27.txt  quality_probe_v23_affine64_chinese_short_stepdebug_host4.json  quality_probe_v23_affine64_code_like_host8.json  quality_probe_v23_affine64_code_like_stepdebug_host4.json  quality_probe_v23_lmhead_mnnfp16_chinese_short_stepdebug_host4.json  quality_probe_v23_lmhead_mnnfp16_code_like_stepdebug_host4.json  quality_probe_v23_v15_chinese_short_prefill_debug_host8.json  (+82 more)
scripts/: build_android.ps1  build_android.sh  build_mnn_android.sh  cleanup_local_artifacts.ps1  cleanup_local_artifacts.sh  convert_model.sh  download_model.ps1  download_model.sh  fetch_mnn.ps1  find_android_sdk.ps1  pack_model.sh  run_local_adb.sh
scripts/aws/: check_credentials.py  common.py  create_exact_device_pool.py  create_or_get_project.py  download_artifacts.py  list_devicefarm_devices.py  make_report.py  schedule_benchmark_run.py  upload_artifact.py  wait_for_run.py
scripts/quality/: compare_quality_validation.py
scripts/report/: write_v27_final_reports.py
(+25 files in other folders)
